dist_man1_MANS=

if BUILD_DRIYALD
  dist_man1_MANS+=driyald.1
endif

if ENABLE_QT
  dist_man1_MANS+=driyal-qt.1
endif

if BUILD_DRIYAL_CLI
  dist_man1_MANS+=driyal-cli.1
endif

if BUILD_DRIYAL_TX
  dist_man1_MANS+=driyal-tx.1
endif

if BUILD_DRIYAL_UTIL
  dist_man1_MANS+=driyal-util.1
endif

if ENABLE_WALLET
if BUILD_DRIYAL_WALLET
  dist_man1_MANS+=driyal-wallet.1
endif
endif
